make the ObjectMapper configuration explicit